--- a/TheWitcher3.html
+++ b/TheWitcher3.html
@@ -20,14 +20,14 @@
           than 4 million copies worldwide,more than doubling the total sales of
           its predecessor, The Witcher 2: Assassins of Kings.
         </p>
-        <img src="img/TheWitcher3_3.png" width="400" />
+        <img src="TheWitcher3_3.png" width="400" />
       </article>
     </section>
     <section class="container">
       <article>
         <h2>The Witcher 3: The Wild Hunt</h2>
         <p></p>
-        <img src="img/TheWitcher3_2.png" width="400" />
+        <img src="TheWitcher3_2.png" width="400" />
         <p></p>
       </article>
     </section>
@@ -35,7 +35,7 @@
       <article>
         <h2>The Witcher 3: The Wild Hunt</h2>
         <p></p>
-        <img src="img/TheWitcher3_1.png" width="400" />
+        <img src="TheWitcher3_1.png" width="400" />
       </article>
     </section>
     <section class="container">
@@ -52,7 +52,7 @@
           expansions at once by getting the Expansion Pass, now on sale through
           several retailers.
         </p>
-        <img src="img/TheWitcher3_4.png" width="400" />
+        <img src="TheWitcher3_4.png" width="400" />
       </article>
     </section>
     <section class="container">
@@ -65,7 +65,7 @@
           untainted by war, where an atmosphere of carefree indulgence and
           knightly ritual masks an ancient and bloody secret.
         </p>
-        <img src="img/TheWitcher3_TheUnseenElder.jpg" width="400" />
+        <img src="TheWitcher3_TheUnseenElder.jpg" width="400" />
       </article>
     </section>
     <footer>
